# chipwhisper-marketplace

./: .gitignore  LICENSE  README.md  README.zh-CN.md
.claude-plugin/: marketplace.json
docker/: docker-compose.yml
plugins/embedded-docs/: .mcp.json  pyproject.toml
plugins/embedded-docs/.claude-plugin/: plugin.json
plugins/embedded-docs/data/: chips.json
plugins/embedded-docs/data/errata/: es0005_items.json
plugins/embedded-docs/data/graph/: f1_knowledge_graph.json  graph_schema_v0.json  register_relations.json
plugins/embedded-docs/data/pin_mapping/: stm32f103c8_lqfp48.json
plugins/embedded-docs/embedded_docs/: build.py  chip_registry.py  server.py
plugins/embedded-docs/src/graph/: graph_builder.py  traversal_rules.py
plugins/embedded-docs/src/parser/: doc_associator.py  doc_chunker.py  svd_parser.py
plugins/embedded-docs/src/retrieval/: intent_classifier.py  retrieval_orchestrator.py  shared_model.py  token_budget.py
plugins/serial-debug/: .mcp.json  pyproject.toml
plugins/serial-debug/.claude-plugin/: plugin.json
plugins/serial-debug/serial_debug_mcp/: server.py
plugins/simulation/: .mcp.json  pyproject.toml
plugins/simulation/.claude-plugin/: plugin.json
plugins/simulation/simulation_mcp/: server.py
plugins/stm32-firmware-dev/.claude-plugin/: plugin.json
plugins/stm32-firmware-dev/evals/: evals.json  grade_all.py
plugins/stm32-firmware-dev/skills/stm32-firmware-dev/: SKILL.md
plugins/stm32-firmware-dev/workspace/iteration-1/: benchmark.json  benchmark.md  review.html
(+148 files in other folders)
