[project]
name = "simulation-mcp"
version = "0.1.0"
description = "QEMU firmware simulation MCP server for STM32 microcontrollers"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.19",
]

[tool.hatch.build.targets.wheel]
packages = ["simulation_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
